--- a/css/main.css
+++ b/css/main.css
@@ -1,9 +1,8 @@
+body {
+    font-family: 'Nunito Sans', sans-serif;
+    font-weight: 900;
+}
 h1 {
     color: red;
-}
-ul {
-    background-color: aqua;
-}
-ol {
-    background-color: aqua;
+    font-weight: 900;
 }
