--- a/css/test.css
+++ b/css/test.css
@@ -11,20 +11,24 @@ h1, h2, h3 {
     text-transform: uppercase;
     letter-spacing: 0.5px;
 }
-header {
+.header {
     font-size: 20px;
     display: flex;
     border-bottom: 1px solid #000;
-    padding-bottom: 10px;
+    padding: 10px 20px;
+    align-items: center;
 }
 footer {
     font-size: 13px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 .logo {
     color: lightgreen;
     background-color: rebeccapurple;
     font-weight: 700;
     margin-right: 50px;
+    padding: 5px 15px;
     text-decoration: none;
 }
 ul {
@@ -34,7 +38,7 @@ ul {
     margin: 0;
 }
 ul > li {
-    margin-right: 10px;
+    margin-right: 30px;
 }
 .box {
     display: flex;
@@ -43,9 +47,14 @@ ul > li {
     border-bottom: 1px solid #000;
 }
 aside {
-    border-right: 1px solid #000;
-    padding-right: 20px;
+    background-color: lavender;
+    padding: 10px 20px;
 }
 .post {
     padding-bottom: 20px;
+}
+section {
+    background-color: lavender;
+    padding: 5px 20px;
+    margin-bottom: 20px;
 }
